hphp/hack/test/extended_reasons/union.php.exp
error: Typing[4110] Invalid return type [1]
-> Expected A [2]
-> But got B [3]
-> Here's why: this hint [3]
-> flows into this expression [4]
-> which itself flows into this expression [5]
-> which itself flows into this expression, via the union type [6]
-> which itself flows into this expression [1]
-> which itself flows into this hint [2]

union.php:16:10
         7 | }
         8 | 
[2,3,4]  9 | function foo(bool  $p, A $x, B $y): A {
[6]     10 |   if($p){
[6]     11 |     $z = $x;
[6]     12 |   } else{
[5,6]   13 |     $z = $y;
[6]     14 |   }
        15 | 
[1]     16 |   return $z;
        17 | }

1 error found.
